--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,4 @@ Server/enc_temp_folder/691be91d52b977db6125f51899899/RateCalculator.cpp
 Server/enc_temp_folder/ec94dfcd64b762cf81550d2df7a5cd4/capi_rtc_publish.cpp
 Server/enc_temp_folder/e71e63232c4329f45191386b51de64f5/crtc_transport.cpp
 Server/enc_temp_folder/81fbfa2e83f115ee33fd16fa752d77b/crtsp_session.cpp
+/Server/lib
