--- a/Server/Server/Server.vcxproj.filters
+++ b/Server/Server/Server.vcxproj.filters
@@ -1152,6 +1152,7 @@
     </ClCompile> 
     <ClCompile Include="clibuv_aysnc_thread.c">
       <Filter>uv_util</Filter> 
+	  </ClCompile>
     <ClCompile Include="usrsctp\usrsctplib\user_environment.c">
       <Filter>usrsctp\usrsctplib</Filter>
     </ClCompile>
