--- a/Server/bin/server.cfg
+++ b/Server/bin/server.cfg
@@ -5,20 +5,20 @@ rtc_announced_ip = 192.168.1.175
 websocket_wan_port = 9000
 #rtc_wan_ip = 222.128.2.68
 rtc_min_port = 9001
-rtc_max_port = 9100
+rtc_max_port = 9099
 
-#rtc_wan_ip = 222.128.2.68
+rtc_wan_ip = 222.128.2.68
 
 #rtc_wan_ip = 192.168.1.175
 
-rtc_wan_ip = 192.168.2.7
+#rtc_wan_ip = 192.168.2.7
 
-rtc_min_bitrate = 10000
-rtc_start_bitrate = 15000
+#rtc_min_bitrate = 100000
+#rtc_start_bitrate = 150000
 
-rtc_max_bitrate = 15000
+#rtc_max_bitrate = 150000
 
-#stun_time_out = 10000
+stun_time_out = 5000
 
 
 rtsp_wan_port = 9900
