--- a/Server/www/package.json
+++ b/Server/www/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.15.6",
     "helmet": "^3.21.3",
     "log4js": "^6.6.1",
+    "nodejs-websocket": "^1.7.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sdp-transform": "^2.14.1",
