--- a/Server/Server/Server.vcxproj.filters
+++ b/Server/Server/Server.vcxproj.filters
@@ -277,6 +277,9 @@
     <Filter Include="libsrtp\srtp\crypto\replay">
       <UniqueIdentifier>{57132154-f27b-4343-9fff-16f87bc8a537}</UniqueIdentifier>
     </Filter>
+    <Filter Include="http">
+      <UniqueIdentifier>{a17755b0-763a-4f05-a842-80c62c46af16}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cnet_type.cpp">
@@ -1275,6 +1278,9 @@
     </ClCompile>
     <ClCompile Include="libsrtp\srtp\crypto\replay\ut_sim.c">
       <Filter>libsrtp\srtp\crypto\replay</Filter>
+    </ClCompile>
+    <ClCompile Include="http_examples.cpp">
+      <Filter>http</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -2426,6 +2432,24 @@
     </ClInclude>
     <ClInclude Include="libsrtp\srtp\crypto\include\stat.h">
       <Filter>libsrtp\srtp\crypto\include</Filter>
+    </ClInclude>
+    <ClInclude Include="asio_compatibility.hpp">
+      <Filter>http</Filter>
+    </ClInclude>
+    <ClInclude Include="crypto.hpp">
+      <Filter>http</Filter>
+    </ClInclude>
+    <ClInclude Include="mutex.hpp">
+      <Filter>http</Filter>
+    </ClInclude>
+    <ClInclude Include="server_http.hpp">
+      <Filter>http</Filter>
+    </ClInclude>
+    <ClInclude Include="status_code.hpp">
+      <Filter>http</Filter>
+    </ClInclude>
+    <ClInclude Include="utility.hpp">
+      <Filter>http</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
