--- a/Server/bin/server.cfg
+++ b/Server/bin/server.cfg
@@ -7,9 +7,9 @@ websocket_wan_port = 9000
 rtc_min_port = 9001
 rtc_max_port = 9099
 
-rtc_wan_ip = 222.128.2.68
+#rtc_wan_ip = 222.128.2.68
 
-#rtc_wan_ip = 192.168.1.175
+rtc_wan_ip = 192.168.1.175
 
 #rtc_wan_ip = 192.168.2.7
 
@@ -25,3 +25,6 @@ rtsp_wan_port = 9900
 
 
 rtsp_test_h264_file = ../bin/test.h264
+
+
+web_http_wan_port = 9101
