--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,29 @@ Server/enc_temp_folder/691be91d52b977db6125f51899899/RateCalculator.cpp
 Server/enc_temp_folder/ec94dfcd64b762cf81550d2df7a5cd4/capi_rtc_publish.cpp
 Server/enc_temp_folder/e71e63232c4329f45191386b51de64f5/crtc_transport.cpp
 Server/enc_temp_folder/81fbfa2e83f115ee33fd16fa752d77b/crtsp_session.cpp
+/Server/Server/libsrtp/srtp/fuzzer/corpus
+/Server/Tools/rtcsvc/.vs
+/build-moonlight-qt-Desktop_x86_windows_msvc2017_pe_64bit-Debug
+/moonlight-qt
+/Sunshine
+/webrtc-turnserver-check
+/20230728140125_media_rtc_server.log
+/20230807160250_test_av1.log
+/Server/p2p/p2p/.vs
+/Server/p2p/p2p/p2p/x64/Release
+/Sunshine.7z
+/chensong.log
+/Server/Server/a.txt
+/Server/Server/clibuv
+/Server/Server/delete
+/Server/Server/libuv.log
+/Server/Server/net_udp.csv
+/Server/Server/recv_rtp_packet.csv
+/Server/Server/rtp_data_enpty.csv
+/Server/Server/rtp_recv_packet.csv
+/Server/Server/send_rtp_packet.csv
+/Server/Server/test_render.mp4
+/Server/p2p/p2p/p2p/log/20230822192345_rtc_native.log
+/Server/www/--rtc
+/Server/www/rtc.7z
+/Server/p2p/p2p/x64/Release
