--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,4 @@ Server/enc_temp_folder/81fbfa2e83f115ee33fd16fa752d77b/crtsp_session.cpp
 /Server/www/--rtc
 /Server/www/rtc.7z
 /Server/p2p/p2p/x64/Release
+/Server/www/old_p2p
