--- a/Server/bin/server.cfg
+++ b/Server/bin/server.cfg
@@ -9,7 +9,7 @@ rtc_max_port = 9099
 
 #rtc_wan_ip = 222.128.2.68
 
-rtc_wan_ip = 192.168.1.175
+rtc_wan_ip = 192.168.0.218
 
 #rtc_wan_ip = 192.168.2.7
 
@@ -24,7 +24,7 @@ stun_time_out = 5000
 rtsp_wan_port = 9900
 
 
-rtsp_test_h264_file = ../bin/test.h264
+rtsp_test_h264_file = D:/Tools/input.h264
 
 
 web_http_wan_port = 9101
